# mybuddy

./: .env.example  .gitignore  README.md  VERSIONS.md  clone_aos_deps.ps1
C5_AgentOrchestration/airbyte-agent-sdk/: README.md  pyproject.toml
C5_AgentOrchestration/airbyte-agent-sdk/.claude-plugin/: marketplace.json  plugin.json
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/: __init__.py  auth_strategies.py  cli.py  config.py  connect.py  connect.pyi  connector_model_loader.py  constants.py  errors.py  exceptions.py  extensions.py  http_client.py  introspection.py  registry.py  secrets.py  skill_docs_renderer.py  tools.py  types.py  utils.py  workspace.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/cloud_utils/: client.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/codegen/: __init__.py  filters.py  generator.py  serializer.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/executor/: __init__.py  hosted_executor.py  local_executor.py  models.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/http/: __init__.py  config.py  exceptions.py  response.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/logging/: logger.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/observability/: redactor.py  session.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/schema/: __init__.py  base.py  components.py  connector.py  extensions.py  interpolation.py  openapi-connector-schema.yaml  operations.py  security.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/telemetry/: tracker.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/testing/: __init__.py  cassette_generator.py  diff_generator.py  helpers.py  html_reporter.py  mock_server.py  models.py  reporter.py  runner.py  spec_loader.py  validator.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/translation/: __init__.py  _decorator.py  _output.py  _predicates.py  _strategies.py
C5_AgentOrchestration/airbyte-agent-sdk/airbyte_agent_sdk/validation/: __init__.py  cache.py  overview.py  readiness.py  replication.py
C5_AgentOrchestration/airbyte-agent-sdk/connectors/amazon-ads/: README.context.json
C5_AgentOrchestration/airbyte-agent-sdk/connectors/amazon-seller-partner/: README.context.json
C5_AgentOrchestration/airbyte-agent-sdk/connectors/amplitude/: README.context.json
C5_AgentOrchestration/airbyte-agent-sdk/connectors/asana/: README.context.json
C5_AgentOrchestration/airbyte-agent-sdk/connectors/chargebee/: README.context.json
C5_AgentOrchestration/airbyte-agent-sdk/connectors/clickup-api/: README.context.json
(+5702 files in other folders)
