[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbyte-agent-sdk"
version = "0.1.287"
description = "Airbyte Agent SDK: typed connectors that give AI agents access to 50+ third-party APIs"
authors = [{ name = "Airbyte", email = "contact@airbyte.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pyyaml>=6.0,<7.0.0",
    "python-dotenv>=1.2.2",
    "jinja2>=3.1.6,<4.0.0",
    "click>=8.0.0",
    "segment-analytics-python>=2.3.4,<3.0.0",
    "jsonref>=1.1.0",
    "jsonpath-ng>=1.6.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "jsonschema>=4.24.0,<5.0.0",
    "packaging>=21.0",
    "urllib3>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0",
    "pytest-httpx>=0.30.0",
    "ruff==0.7.3",
    "pdoc>=15.0.0",
    "poethepoet>=0.24.0",
    "pydantic-ai>=0.0.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["airbyte_agent_sdk*"]

[tool.setuptools.package-data]
airbyte_agent_sdk = ["py.typed", "*.pyi", "codegen/templates/*.jinja2", "specs/*/connector.yaml"]

[dependency-groups]
dev = [
    "fastmcp>=3.2.4",
    "langchain-core>=1.3.2",
    "langchain-openai>=0.3.0",
    "langgraph>=0.6.0",
    "openai-agents>=0.14.6",
    "pytest-cov>=7.0.0",
]

[tool.poe.tasks]
docs-generate = { env = { PDOC_ALLOW_EXEC = "1" }, cmd = "python docs/generate.py", help = "Generate API documentation with pdoc." }
docs-preview = { shell = "poe docs-generate && python -m webbrowser docs/generated/index.html", help = "Generate API documentation and open it in the default web browser." }

[tool.ruff]
extend = "../shared/ruff.toml"

[tool.ruff.lint]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from e, for HTTPException
    "UP006",  # Use `dict` instead of `Dict` for type annotation - requires refactoring
    "UP035",  # Deprecated `typing.` declarations - requires refactoring 
    "UP038",  #
    "UP007",  # Allow use of Optional
    "B007",   # Loop control variable not used within loop body
    "C401",   # Unnecessary generator
    "C414",   # Unnecessary list call within sorted()
    "DTZ005", # Date without timezone object
    "DTZ001", # Missing timezone information
    "B017",   # Ignore catching `Exception` and `BaseException`
] # Ignore some rules that would require significant refactoring
